wip: integrator configuration
