# docs/swagger.json
@@ -104,25 +104,6 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Create configuration required for OA to send data to integrator.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "Create config for integrator",
-                "responses": {}
-            },
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Get configurations for all integrators",
                 "consumes": [
                     "application/json"
@@ -134,6 +115,25 @@
                     "config"
                 ],
                 "summary": "Get configs for all integrator",
+                "responses": {}
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create configuration required for OA to send data to integrator.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Create config for integrator",
                 "parameters": [
                     {
                         "description": "Request Body",
@@ -147,6 +147,72 @@
                 "responses": {}
             }
         },
+        "/config/integrator-config/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create configuration required for OA to send data to integrator.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Create config for integrator",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/config.IntegratorConfig"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create configuration required for OA to send data to integrator.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Delete config for integrator",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/config/snb-config": {
             "get": {
                 "security": [
@@ -154,7 +220,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Get configuration required for OA to works.",
+                "description": "Get all configuration required for OA to works.",
                 "consumes": [
                     "application/json"
                 ],
@@ -232,7 +298,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Create configuration required for OA to works.",
+                "description": "Update configuration required for OA to works.",
                 "consumes": [
                     "application/json"
                 ],
@@ -242,7 +308,7 @@
                 "tags": [
                     "config"
                 ],
-                "summary": "Create config for snb",
+                "summary": "Update config for snb",
                 "parameters": [
                     {
                         "description": "Request Body",
@@ -268,7 +334,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Get configuration required for OA to works.",
+                "description": "Delete configuration required for OA to works.",
                 "consumes": [
                     "application/json"
                 ],
@@ -278,7 +344,7 @@
                 "tags": [
                     "config"
                 ],
-                "summary": "Get config for snb",
+                "summary": "Delete config for snb",
                 "parameters": [
                     {
                         "type": "string",
